--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -369,6 +369,9 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
@@ -376,10 +379,10 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="9cce6efc7d524c97b818ee7f6be8c5fe-db38324050c245358990a5ce5a8e6401" name="9cce6efc7d524c97b818ee7f6be8c5fe" class="tab" checked><label for="9cce6efc7d524c97b818ee7f6be8c5fe-db38324050c245358990a5ce5a8e6401" >General</label>
-<input type="radio" id="9cce6efc7d524c97b818ee7f6be8c5fe-693b413019e44cb0b830f04bdbc2a541" name="9cce6efc7d524c97b818ee7f6be8c5fe" class="tab" ><label for="9cce6efc7d524c97b818ee7f6be8c5fe-693b413019e44cb0b830f04bdbc2a541" >Startup</label>
-<input type="radio" id="9cce6efc7d524c97b818ee7f6be8c5fe-3c1a2c7797884e2fac1eaac252ed3d52" name="9cce6efc7d524c97b818ee7f6be8c5fe" class="tab" ><label for="9cce6efc7d524c97b818ee7f6be8c5fe-3c1a2c7797884e2fac1eaac252ed3d52" >Android</label>
-<input type="radio" id="9cce6efc7d524c97b818ee7f6be8c5fe-4c401318ed9746c9951559efdba60a70" name="9cce6efc7d524c97b818ee7f6be8c5fe" class="tab" ><label for="9cce6efc7d524c97b818ee7f6be8c5fe-4c401318ed9746c9951559efdba60a70" >iOS</label>
+<input type="radio" id="24819c7e7218441ab3aee4f0ec97363e-4e01fd1efd774ba68c14c2ffe68cf9b4" name="24819c7e7218441ab3aee4f0ec97363e" class="tab" checked><label for="24819c7e7218441ab3aee4f0ec97363e-4e01fd1efd774ba68c14c2ffe68cf9b4" >General</label>
+<input type="radio" id="24819c7e7218441ab3aee4f0ec97363e-9541928ad6e74af6b946503d3eb86966" name="24819c7e7218441ab3aee4f0ec97363e" class="tab" ><label for="24819c7e7218441ab3aee4f0ec97363e-9541928ad6e74af6b946503d3eb86966" >Startup</label>
+<input type="radio" id="24819c7e7218441ab3aee4f0ec97363e-dce6546c7098415d83296ecd1ea0cc87" name="24819c7e7218441ab3aee4f0ec97363e" class="tab" ><label for="24819c7e7218441ab3aee4f0ec97363e-dce6546c7098415d83296ecd1ea0cc87" >Android</label>
+<input type="radio" id="24819c7e7218441ab3aee4f0ec97363e-0422db4809e5401e9504557bcaad79c4" name="24819c7e7218441ab3aee4f0ec97363e" class="tab" ><label for="24819c7e7218441ab3aee4f0ec97363e-0422db4809e5401e9504557bcaad79c4" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
