--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -367,6 +367,9 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
@@ -374,11 +377,11 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="00a5bccfd469465a892cc4010ecdb4aa-103c0d7f19a84868aa1d4abaae255e59" name="00a5bccfd469465a892cc4010ecdb4aa" class="tab" checked=""><label for="00a5bccfd469465a892cc4010ecdb4aa-103c0d7f19a84868aa1d4abaae255e59">General</label>
-<input type="radio" id="00a5bccfd469465a892cc4010ecdb4aa-800c34e917694da188aa7c13b6d1d984" name="00a5bccfd469465a892cc4010ecdb4aa" class="tab"><label for="00a5bccfd469465a892cc4010ecdb4aa-800c34e917694da188aa7c13b6d1d984">Startup</label>
-<input type="radio" id="00a5bccfd469465a892cc4010ecdb4aa-a649e9925b3b487596499640f744a96b" name="00a5bccfd469465a892cc4010ecdb4aa" class="tab"><label for="00a5bccfd469465a892cc4010ecdb4aa-a649e9925b3b487596499640f744a96b">Android</label>
-<input type="radio" id="00a5bccfd469465a892cc4010ecdb4aa-611be4a2d31a4182ad8b516c8ddf64cc" name="00a5bccfd469465a892cc4010ecdb4aa" class="tab"><label for="00a5bccfd469465a892cc4010ecdb4aa-611be4a2d31a4182ad8b516c8ddf64cc">iOS</label>
-<input type="radio" id="00a5bccfd469465a892cc4010ecdb4aa-50b754ec78c442d7a8c10f19359d81ea" name="00a5bccfd469465a892cc4010ecdb4aa" class="tab"><label for="00a5bccfd469465a892cc4010ecdb4aa-50b754ec78c442d7a8c10f19359d81ea">Windows</label>
+<input type="radio" id="9f92d0a6bb014a2cb4328ca7d02c9cb2-9320f58c61e14b9581dc47206592306f" name="9f92d0a6bb014a2cb4328ca7d02c9cb2" class="tab" checked=""><label for="9f92d0a6bb014a2cb4328ca7d02c9cb2-9320f58c61e14b9581dc47206592306f">General</label>
+<input type="radio" id="9f92d0a6bb014a2cb4328ca7d02c9cb2-35a87721f3e8439a8b8ef84bd4caceef" name="9f92d0a6bb014a2cb4328ca7d02c9cb2" class="tab"><label for="9f92d0a6bb014a2cb4328ca7d02c9cb2-35a87721f3e8439a8b8ef84bd4caceef">Startup</label>
+<input type="radio" id="9f92d0a6bb014a2cb4328ca7d02c9cb2-69b5f46481a0441fb6603aae017f9f08" name="9f92d0a6bb014a2cb4328ca7d02c9cb2" class="tab"><label for="9f92d0a6bb014a2cb4328ca7d02c9cb2-69b5f46481a0441fb6603aae017f9f08">Android</label>
+<input type="radio" id="9f92d0a6bb014a2cb4328ca7d02c9cb2-61bffa165a844a8f8f04a4339ad94140" name="9f92d0a6bb014a2cb4328ca7d02c9cb2" class="tab"><label for="9f92d0a6bb014a2cb4328ca7d02c9cb2-61bffa165a844a8f8f04a4339ad94140">iOS</label>
+<input type="radio" id="9f92d0a6bb014a2cb4328ca7d02c9cb2-d95566257df24893bfd89c0ec9430d7c" name="9f92d0a6bb014a2cb4328ca7d02c9cb2" class="tab"><label for="9f92d0a6bb014a2cb4328ca7d02c9cb2-d95566257df24893bfd89c0ec9430d7c">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
