--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -369,16 +369,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="441aad94f43140a8b801834dd707281a-fbf17aa41f444affb5a64460527cae77" name="441aad94f43140a8b801834dd707281a" class="tab" checked><label for="441aad94f43140a8b801834dd707281a-fbf17aa41f444affb5a64460527cae77" >General</label>
-<input type="radio" id="441aad94f43140a8b801834dd707281a-30f3cf121b2f49de98d576e9633e8507" name="441aad94f43140a8b801834dd707281a" class="tab" ><label for="441aad94f43140a8b801834dd707281a-30f3cf121b2f49de98d576e9633e8507" >Startup</label>
-<input type="radio" id="441aad94f43140a8b801834dd707281a-e2c9036c487249e2b2f035d5d817b809" name="441aad94f43140a8b801834dd707281a" class="tab" ><label for="441aad94f43140a8b801834dd707281a-e2c9036c487249e2b2f035d5d817b809" >Android</label>
-<input type="radio" id="441aad94f43140a8b801834dd707281a-e9a131a3cbc4474a9bfe0fe18d3a2a8d" name="441aad94f43140a8b801834dd707281a" class="tab" ><label for="441aad94f43140a8b801834dd707281a-e9a131a3cbc4474a9bfe0fe18d3a2a8d" >iOS</label>
+<input type="radio" id="b326dbecda604aaca6d815902acaa4be-70511dd3200c4d7ebb2f132fbe3df8ea" name="b326dbecda604aaca6d815902acaa4be" class="tab" checked><label for="b326dbecda604aaca6d815902acaa4be-70511dd3200c4d7ebb2f132fbe3df8ea" >General</label>
+<input type="radio" id="b326dbecda604aaca6d815902acaa4be-aa39ac563f7444e1b150b27aca7185a9" name="b326dbecda604aaca6d815902acaa4be" class="tab" ><label for="b326dbecda604aaca6d815902acaa4be-aa39ac563f7444e1b150b27aca7185a9" >Startup</label>
+<input type="radio" id="b326dbecda604aaca6d815902acaa4be-1cf7f60cc29e49058f999dfdb96109c3" name="b326dbecda604aaca6d815902acaa4be" class="tab" ><label for="b326dbecda604aaca6d815902acaa4be-1cf7f60cc29e49058f999dfdb96109c3" >Android</label>
+<input type="radio" id="b326dbecda604aaca6d815902acaa4be-5832c18f46fb4d7b9f236d32fbc4f209" name="b326dbecda604aaca6d815902acaa4be" class="tab" ><label for="b326dbecda604aaca6d815902acaa4be-5832c18f46fb4d7b9f236d32fbc4f209" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
