--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="980c34dfcd1b4a72a7af50d7877c163a-f5c42ef3214a4b3fa39641f6b24e86e0" name="980c34dfcd1b4a72a7af50d7877c163a" class="tab" checked><label for="980c34dfcd1b4a72a7af50d7877c163a-f5c42ef3214a4b3fa39641f6b24e86e0" >General</label>
-<input type="radio" id="980c34dfcd1b4a72a7af50d7877c163a-1ba7a9833b6e454dac8903d00faa0acd" name="980c34dfcd1b4a72a7af50d7877c163a" class="tab" ><label for="980c34dfcd1b4a72a7af50d7877c163a-1ba7a9833b6e454dac8903d00faa0acd" >Startup</label>
-<input type="radio" id="980c34dfcd1b4a72a7af50d7877c163a-974472a2326c4f9cbd1f169687b39da1" name="980c34dfcd1b4a72a7af50d7877c163a" class="tab" ><label for="980c34dfcd1b4a72a7af50d7877c163a-974472a2326c4f9cbd1f169687b39da1" >Android</label>
-<input type="radio" id="980c34dfcd1b4a72a7af50d7877c163a-4d1c6a96b1bd4107b5fc63f8985a64d8" name="980c34dfcd1b4a72a7af50d7877c163a" class="tab" ><label for="980c34dfcd1b4a72a7af50d7877c163a-4d1c6a96b1bd4107b5fc63f8985a64d8" >iOS</label>
-<input type="radio" id="980c34dfcd1b4a72a7af50d7877c163a-e1600e524ea94843beef0e9e2ed010c4" name="980c34dfcd1b4a72a7af50d7877c163a" class="tab" ><label for="980c34dfcd1b4a72a7af50d7877c163a-e1600e524ea94843beef0e9e2ed010c4" >Windows</label>
+<input type="radio" id="53385b09f0a24092a0bf4a88b96f090c-91174ee8c5c840909f482a20d22cc9f0" name="53385b09f0a24092a0bf4a88b96f090c" class="tab" checked><label for="53385b09f0a24092a0bf4a88b96f090c-91174ee8c5c840909f482a20d22cc9f0" >General</label>
+<input type="radio" id="53385b09f0a24092a0bf4a88b96f090c-ccce0a9c2d8f4005ab5ddd2f6c12724f" name="53385b09f0a24092a0bf4a88b96f090c" class="tab" ><label for="53385b09f0a24092a0bf4a88b96f090c-ccce0a9c2d8f4005ab5ddd2f6c12724f" >Startup</label>
+<input type="radio" id="53385b09f0a24092a0bf4a88b96f090c-a230bd072b2e4d10a853f10c79412b88" name="53385b09f0a24092a0bf4a88b96f090c" class="tab" ><label for="53385b09f0a24092a0bf4a88b96f090c-a230bd072b2e4d10a853f10c79412b88" >Android</label>
+<input type="radio" id="53385b09f0a24092a0bf4a88b96f090c-33cdd083aca9483aa7b15461f69a00d5" name="53385b09f0a24092a0bf4a88b96f090c" class="tab" ><label for="53385b09f0a24092a0bf4a88b96f090c-33cdd083aca9483aa7b15461f69a00d5" >iOS</label>
+<input type="radio" id="53385b09f0a24092a0bf4a88b96f090c-039095e00a434b908eb5d36a16a59710" name="53385b09f0a24092a0bf4a88b96f090c" class="tab" ><label for="53385b09f0a24092a0bf4a88b96f090c-039095e00a434b908eb5d36a16a59710" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
