--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -367,17 +367,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b5cde9a4a4bb41e7880720fd03159402-69c7d3d5ed274fdab7188706ed49b833" name="b5cde9a4a4bb41e7880720fd03159402" class="tab" checked=""><label for="b5cde9a4a4bb41e7880720fd03159402-69c7d3d5ed274fdab7188706ed49b833">General</label>
-<input type="radio" id="b5cde9a4a4bb41e7880720fd03159402-2bb1d7a2c37b4c398eaec03e379325e7" name="b5cde9a4a4bb41e7880720fd03159402" class="tab"><label for="b5cde9a4a4bb41e7880720fd03159402-2bb1d7a2c37b4c398eaec03e379325e7">Startup</label>
-<input type="radio" id="b5cde9a4a4bb41e7880720fd03159402-630c4febae244896a8b9c9cbc196a8a5" name="b5cde9a4a4bb41e7880720fd03159402" class="tab"><label for="b5cde9a4a4bb41e7880720fd03159402-630c4febae244896a8b9c9cbc196a8a5">Android</label>
-<input type="radio" id="b5cde9a4a4bb41e7880720fd03159402-b300c28d93db4ad9998b558929641f74" name="b5cde9a4a4bb41e7880720fd03159402" class="tab"><label for="b5cde9a4a4bb41e7880720fd03159402-b300c28d93db4ad9998b558929641f74">iOS</label>
-<input type="radio" id="b5cde9a4a4bb41e7880720fd03159402-40b30fa87b4448a2b7ab9eb442b7e099" name="b5cde9a4a4bb41e7880720fd03159402" class="tab"><label for="b5cde9a4a4bb41e7880720fd03159402-40b30fa87b4448a2b7ab9eb442b7e099">Windows</label>
+<input type="radio" id="b0e242e4cad747b5acf587b159541466-d957e0d32c3149dfb4aac3a35f6c36d6" name="b0e242e4cad747b5acf587b159541466" class="tab" checked=""><label for="b0e242e4cad747b5acf587b159541466-d957e0d32c3149dfb4aac3a35f6c36d6">General</label>
+<input type="radio" id="b0e242e4cad747b5acf587b159541466-93eae500b9f04ec7bf9acd965479ac8a" name="b0e242e4cad747b5acf587b159541466" class="tab"><label for="b0e242e4cad747b5acf587b159541466-93eae500b9f04ec7bf9acd965479ac8a">Startup</label>
+<input type="radio" id="b0e242e4cad747b5acf587b159541466-9516bddba8924577b00262fa33d14ca2" name="b0e242e4cad747b5acf587b159541466" class="tab"><label for="b0e242e4cad747b5acf587b159541466-9516bddba8924577b00262fa33d14ca2">Android</label>
+<input type="radio" id="b0e242e4cad747b5acf587b159541466-5d54f75d06fb4c59b3bdf9f04563c7ad" name="b0e242e4cad747b5acf587b159541466" class="tab"><label for="b0e242e4cad747b5acf587b159541466-5d54f75d06fb4c59b3bdf9f04563c7ad">iOS</label>
+<input type="radio" id="b0e242e4cad747b5acf587b159541466-86c2827d6d454695bb6af7f8f24421e4" name="b0e242e4cad747b5acf587b159541466" class="tab"><label for="b0e242e4cad747b5acf587b159541466-86c2827d6d454695bb6af7f8f24421e4">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -459,11 +462,11 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="63c1aec1abfc4a11a7ae13e967d57d11-0b19fb67bd2b419eb72e4f9c5311ad04" name="63c1aec1abfc4a11a7ae13e967d57d11" class="tab" checked=""><label for="63c1aec1abfc4a11a7ae13e967d57d11-0b19fb67bd2b419eb72e4f9c5311ad04">General</label>
-<input type="radio" id="63c1aec1abfc4a11a7ae13e967d57d11-2086d4447fe14136a47b19a83767bc59" name="63c1aec1abfc4a11a7ae13e967d57d11" class="tab"><label for="63c1aec1abfc4a11a7ae13e967d57d11-2086d4447fe14136a47b19a83767bc59">Startup</label>
-<input type="radio" id="63c1aec1abfc4a11a7ae13e967d57d11-9f05e7b9d08443a8af60b0e4e6f9d725" name="63c1aec1abfc4a11a7ae13e967d57d11" class="tab"><label for="63c1aec1abfc4a11a7ae13e967d57d11-9f05e7b9d08443a8af60b0e4e6f9d725">Android</label>
-<input type="radio" id="63c1aec1abfc4a11a7ae13e967d57d11-dd21b7277b0c442aa5d55a7ed3b6c0ae" name="63c1aec1abfc4a11a7ae13e967d57d11" class="tab"><label for="63c1aec1abfc4a11a7ae13e967d57d11-dd21b7277b0c442aa5d55a7ed3b6c0ae">iOS</label>
-<input type="radio" id="63c1aec1abfc4a11a7ae13e967d57d11-e7b1434b141040ffbeb2b18458d64f50" name="63c1aec1abfc4a11a7ae13e967d57d11" class="tab"><label for="63c1aec1abfc4a11a7ae13e967d57d11-e7b1434b141040ffbeb2b18458d64f50">Windows</label>
+<input type="radio" id="beffed8021494e68b323e6b23494042c-d3efadb183634a3e9f6119d8a7135068" name="beffed8021494e68b323e6b23494042c" class="tab" checked=""><label for="beffed8021494e68b323e6b23494042c-d3efadb183634a3e9f6119d8a7135068">General</label>
+<input type="radio" id="beffed8021494e68b323e6b23494042c-e8d9fec1f4c149ef91a8fcc95f44e66f" name="beffed8021494e68b323e6b23494042c" class="tab"><label for="beffed8021494e68b323e6b23494042c-e8d9fec1f4c149ef91a8fcc95f44e66f">Startup</label>
+<input type="radio" id="beffed8021494e68b323e6b23494042c-89ea2a7682cd465b8f04a0f46d963328" name="beffed8021494e68b323e6b23494042c" class="tab"><label for="beffed8021494e68b323e6b23494042c-89ea2a7682cd465b8f04a0f46d963328">Android</label>
+<input type="radio" id="beffed8021494e68b323e6b23494042c-dea2d9b9b57346b5aae35285ed7f4d3f" name="beffed8021494e68b323e6b23494042c" class="tab"><label for="beffed8021494e68b323e6b23494042c-dea2d9b9b57346b5aae35285ed7f4d3f">iOS</label>
+<input type="radio" id="beffed8021494e68b323e6b23494042c-66b943e53d214402b2bdc7e5baa106d1" name="beffed8021494e68b323e6b23494042c" class="tab"><label for="beffed8021494e68b323e6b23494042c-66b943e53d214402b2bdc7e5baa106d1">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
