--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="a40a14af2c1e48aaa3f9a5a3f96d8b94-39d7008e354142f099bbf03cde041906" name="a40a14af2c1e48aaa3f9a5a3f96d8b94" class="tab" checked><label for="a40a14af2c1e48aaa3f9a5a3f96d8b94-39d7008e354142f099bbf03cde041906" >General</label>
-<input type="radio" id="a40a14af2c1e48aaa3f9a5a3f96d8b94-40276c0130904249b3decb7489860a90" name="a40a14af2c1e48aaa3f9a5a3f96d8b94" class="tab" ><label for="a40a14af2c1e48aaa3f9a5a3f96d8b94-40276c0130904249b3decb7489860a90" >Startup</label>
-<input type="radio" id="a40a14af2c1e48aaa3f9a5a3f96d8b94-263f6eedf5174e3bb4eb8f85dfbb2b9f" name="a40a14af2c1e48aaa3f9a5a3f96d8b94" class="tab" ><label for="a40a14af2c1e48aaa3f9a5a3f96d8b94-263f6eedf5174e3bb4eb8f85dfbb2b9f" >Android</label>
-<input type="radio" id="a40a14af2c1e48aaa3f9a5a3f96d8b94-2b96aa72065a4e3eb33efcec505b5ce5" name="a40a14af2c1e48aaa3f9a5a3f96d8b94" class="tab" ><label for="a40a14af2c1e48aaa3f9a5a3f96d8b94-2b96aa72065a4e3eb33efcec505b5ce5" >iOS</label>
-<input type="radio" id="a40a14af2c1e48aaa3f9a5a3f96d8b94-8ad4d90421e24d0cb2b76c39c30dbd4b" name="a40a14af2c1e48aaa3f9a5a3f96d8b94" class="tab" ><label for="a40a14af2c1e48aaa3f9a5a3f96d8b94-8ad4d90421e24d0cb2b76c39c30dbd4b" >Windows</label>
+<input type="radio" id="10a106cf552a463ca54dc786c03f5a17-c7dd11ee4840424c816ef338cf423a7f" name="10a106cf552a463ca54dc786c03f5a17" class="tab" checked><label for="10a106cf552a463ca54dc786c03f5a17-c7dd11ee4840424c816ef338cf423a7f" >General</label>
+<input type="radio" id="10a106cf552a463ca54dc786c03f5a17-e416a3d5caff4e7785b5792eaef8eeb5" name="10a106cf552a463ca54dc786c03f5a17" class="tab" ><label for="10a106cf552a463ca54dc786c03f5a17-e416a3d5caff4e7785b5792eaef8eeb5" >Startup</label>
+<input type="radio" id="10a106cf552a463ca54dc786c03f5a17-8572810d22d4424294417e91da45bb02" name="10a106cf552a463ca54dc786c03f5a17" class="tab" ><label for="10a106cf552a463ca54dc786c03f5a17-8572810d22d4424294417e91da45bb02" >Android</label>
+<input type="radio" id="10a106cf552a463ca54dc786c03f5a17-ab0fbe575ccd47f7b126deeea30924bf" name="10a106cf552a463ca54dc786c03f5a17" class="tab" ><label for="10a106cf552a463ca54dc786c03f5a17-ab0fbe575ccd47f7b126deeea30924bf" >iOS</label>
+<input type="radio" id="10a106cf552a463ca54dc786c03f5a17-8404a9600a524f039d0924794ca51a1c" name="10a106cf552a463ca54dc786c03f5a17" class="tab" ><label for="10a106cf552a463ca54dc786c03f5a17-8404a9600a524f039d0924794ca51a1c" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
