--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="1e8acde6ae994eaf8f5110cba5e476f6-a4434caf13e24ca892108a99668bf547" name="1e8acde6ae994eaf8f5110cba5e476f6" class="tab" checked><label for="1e8acde6ae994eaf8f5110cba5e476f6-a4434caf13e24ca892108a99668bf547" >General</label>
-<input type="radio" id="1e8acde6ae994eaf8f5110cba5e476f6-9d1d70e036fe4d4a9695be82c40bf09e" name="1e8acde6ae994eaf8f5110cba5e476f6" class="tab" ><label for="1e8acde6ae994eaf8f5110cba5e476f6-9d1d70e036fe4d4a9695be82c40bf09e" >Startup</label>
-<input type="radio" id="1e8acde6ae994eaf8f5110cba5e476f6-084c0c039f684cacb0ebdefcfc762796" name="1e8acde6ae994eaf8f5110cba5e476f6" class="tab" ><label for="1e8acde6ae994eaf8f5110cba5e476f6-084c0c039f684cacb0ebdefcfc762796" >Android</label>
-<input type="radio" id="1e8acde6ae994eaf8f5110cba5e476f6-4b95e33fb5f74eb89978be8d1d869949" name="1e8acde6ae994eaf8f5110cba5e476f6" class="tab" ><label for="1e8acde6ae994eaf8f5110cba5e476f6-4b95e33fb5f74eb89978be8d1d869949" >iOS</label>
-<input type="radio" id="1e8acde6ae994eaf8f5110cba5e476f6-bc65464520d2423b9e9982ce21353923" name="1e8acde6ae994eaf8f5110cba5e476f6" class="tab" ><label for="1e8acde6ae994eaf8f5110cba5e476f6-bc65464520d2423b9e9982ce21353923" >Windows</label>
+<input type="radio" id="9cd0ff5a9a284a478e9025b33d014a8d-e75bb042b3344762ac51bdd0cb7454a3" name="9cd0ff5a9a284a478e9025b33d014a8d" class="tab" checked><label for="9cd0ff5a9a284a478e9025b33d014a8d-e75bb042b3344762ac51bdd0cb7454a3" >General</label>
+<input type="radio" id="9cd0ff5a9a284a478e9025b33d014a8d-a11b36e90ef341b687a576a98e3e6e37" name="9cd0ff5a9a284a478e9025b33d014a8d" class="tab" ><label for="9cd0ff5a9a284a478e9025b33d014a8d-a11b36e90ef341b687a576a98e3e6e37" >Startup</label>
+<input type="radio" id="9cd0ff5a9a284a478e9025b33d014a8d-8945d980713f4454b28a1582a4f3ce91" name="9cd0ff5a9a284a478e9025b33d014a8d" class="tab" ><label for="9cd0ff5a9a284a478e9025b33d014a8d-8945d980713f4454b28a1582a4f3ce91" >Android</label>
+<input type="radio" id="9cd0ff5a9a284a478e9025b33d014a8d-f915cdd61f7e4a06a7fcfee724bef170" name="9cd0ff5a9a284a478e9025b33d014a8d" class="tab" ><label for="9cd0ff5a9a284a478e9025b33d014a8d-f915cdd61f7e4a06a7fcfee724bef170" >iOS</label>
+<input type="radio" id="9cd0ff5a9a284a478e9025b33d014a8d-d5d653e9eec74d2fb836365405c79e02" name="9cd0ff5a9a284a478e9025b33d014a8d" class="tab" ><label for="9cd0ff5a9a284a478e9025b33d014a8d-d5d653e9eec74d2fb836365405c79e02" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
