--- a/locations/gps.html
+++ b/locations/gps.html
@@ -369,6 +369,9 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
@@ -376,11 +379,11 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="06c04271455f4dcaa5a6b6b3ef112184-b5fef818f1f9404caf605eeb55c3ec1e" name="06c04271455f4dcaa5a6b6b3ef112184" class="tab" checked><label for="06c04271455f4dcaa5a6b6b3ef112184-b5fef818f1f9404caf605eeb55c3ec1e" >General</label>
-<input type="radio" id="06c04271455f4dcaa5a6b6b3ef112184-5066258563324f7890ad09c5a302026d" name="06c04271455f4dcaa5a6b6b3ef112184" class="tab" ><label for="06c04271455f4dcaa5a6b6b3ef112184-5066258563324f7890ad09c5a302026d" >Startup</label>
-<input type="radio" id="06c04271455f4dcaa5a6b6b3ef112184-45f76a236e964deab4fb046d9b462800" name="06c04271455f4dcaa5a6b6b3ef112184" class="tab" ><label for="06c04271455f4dcaa5a6b6b3ef112184-45f76a236e964deab4fb046d9b462800" >Android</label>
-<input type="radio" id="06c04271455f4dcaa5a6b6b3ef112184-0b8de01d308e483a91316d7b793b91cd" name="06c04271455f4dcaa5a6b6b3ef112184" class="tab" ><label for="06c04271455f4dcaa5a6b6b3ef112184-0b8de01d308e483a91316d7b793b91cd" >iOS</label>
-<input type="radio" id="06c04271455f4dcaa5a6b6b3ef112184-d158e260559a4d60b4744035ffa6b4d5" name="06c04271455f4dcaa5a6b6b3ef112184" class="tab" ><label for="06c04271455f4dcaa5a6b6b3ef112184-d158e260559a4d60b4744035ffa6b4d5" >Windows</label>
+<input type="radio" id="58a38af0135841c3aab3fa213b45b1c8-9139cbde4de6435d8e0c62b071c94fc3" name="58a38af0135841c3aab3fa213b45b1c8" class="tab" checked><label for="58a38af0135841c3aab3fa213b45b1c8-9139cbde4de6435d8e0c62b071c94fc3" >General</label>
+<input type="radio" id="58a38af0135841c3aab3fa213b45b1c8-5cda965d2a5a4f53af632399106bc6c7" name="58a38af0135841c3aab3fa213b45b1c8" class="tab" ><label for="58a38af0135841c3aab3fa213b45b1c8-5cda965d2a5a4f53af632399106bc6c7" >Startup</label>
+<input type="radio" id="58a38af0135841c3aab3fa213b45b1c8-f92ba7fa5c3047a48ae905803d176d18" name="58a38af0135841c3aab3fa213b45b1c8" class="tab" ><label for="58a38af0135841c3aab3fa213b45b1c8-f92ba7fa5c3047a48ae905803d176d18" >Android</label>
+<input type="radio" id="58a38af0135841c3aab3fa213b45b1c8-e5d20a954b1c4858a9202defda6ca3f7" name="58a38af0135841c3aab3fa213b45b1c8" class="tab" ><label for="58a38af0135841c3aab3fa213b45b1c8-e5d20a954b1c4858a9202defda6ca3f7" >iOS</label>
+<input type="radio" id="58a38af0135841c3aab3fa213b45b1c8-a8bd7b1d7d254c6aa24d4b5945246e58" name="58a38af0135841c3aab3fa213b45b1c8" class="tab" ><label for="58a38af0135841c3aab3fa213b45b1c8-a8bd7b1d7d254c6aa24d4b5945246e58" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
