--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -369,6 +369,9 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
@@ -384,10 +387,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="5a8bef9c595a4f79baa5bcf43b486aa6-31fd68c69bc2453fac1c47f379b490cd" name="5a8bef9c595a4f79baa5bcf43b486aa6" class="tab" checked><label for="5a8bef9c595a4f79baa5bcf43b486aa6-31fd68c69bc2453fac1c47f379b490cd" >General</label>
-<input type="radio" id="5a8bef9c595a4f79baa5bcf43b486aa6-9cc1e622293d44fc983abc84dcd06b58" name="5a8bef9c595a4f79baa5bcf43b486aa6" class="tab" ><label for="5a8bef9c595a4f79baa5bcf43b486aa6-9cc1e622293d44fc983abc84dcd06b58" >Startup</label>
-<input type="radio" id="5a8bef9c595a4f79baa5bcf43b486aa6-3e8f58328ac94ecabb08fdb9b1bb048e" name="5a8bef9c595a4f79baa5bcf43b486aa6" class="tab" ><label for="5a8bef9c595a4f79baa5bcf43b486aa6-3e8f58328ac94ecabb08fdb9b1bb048e" >Android</label>
-<input type="radio" id="5a8bef9c595a4f79baa5bcf43b486aa6-57d2987d5f2d407aa5dabb67502fef52" name="5a8bef9c595a4f79baa5bcf43b486aa6" class="tab" ><label for="5a8bef9c595a4f79baa5bcf43b486aa6-57d2987d5f2d407aa5dabb67502fef52" >iOS</label>
+<input type="radio" id="6282c085488e49da9b65c628ba5f8fed-43812ac027524cfabf27c44c27159ae4" name="6282c085488e49da9b65c628ba5f8fed" class="tab" checked><label for="6282c085488e49da9b65c628ba5f8fed-43812ac027524cfabf27c44c27159ae4" >General</label>
+<input type="radio" id="6282c085488e49da9b65c628ba5f8fed-55bb7ca9f89d4b88ad44ca9e9db501de" name="6282c085488e49da9b65c628ba5f8fed" class="tab" ><label for="6282c085488e49da9b65c628ba5f8fed-55bb7ca9f89d4b88ad44ca9e9db501de" >Startup</label>
+<input type="radio" id="6282c085488e49da9b65c628ba5f8fed-4df6faa04f35426387c9749bfc514a7d" name="6282c085488e49da9b65c628ba5f8fed" class="tab" ><label for="6282c085488e49da9b65c628ba5f8fed-4df6faa04f35426387c9749bfc514a7d" >Android</label>
+<input type="radio" id="6282c085488e49da9b65c628ba5f8fed-c71fd0f7db984372966c6beb19a59ed4" name="6282c085488e49da9b65c628ba5f8fed" class="tab" ><label for="6282c085488e49da9b65c628ba5f8fed-c71fd0f7db984372966c6beb19a59ed4" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
