--- a/push/azure.html
+++ b/push/azure.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="5b7ccb7db30945f6b88b57b47884df03-2748a016fdc54cb9baebaf8f322878ac" name="5b7ccb7db30945f6b88b57b47884df03" class="tab" checked><label for="5b7ccb7db30945f6b88b57b47884df03-2748a016fdc54cb9baebaf8f322878ac" >General</label>
-<input type="radio" id="5b7ccb7db30945f6b88b57b47884df03-5184df52b5f241b4a6db07ebbe12a62d" name="5b7ccb7db30945f6b88b57b47884df03" class="tab" ><label for="5b7ccb7db30945f6b88b57b47884df03-5184df52b5f241b4a6db07ebbe12a62d" >Startup</label>
-<input type="radio" id="5b7ccb7db30945f6b88b57b47884df03-cf3fea25dabc4cd3abf375f395cbd4b5" name="5b7ccb7db30945f6b88b57b47884df03" class="tab" ><label for="5b7ccb7db30945f6b88b57b47884df03-cf3fea25dabc4cd3abf375f395cbd4b5" >Android</label>
-<input type="radio" id="5b7ccb7db30945f6b88b57b47884df03-61928d00bed643faa1baf1d5b2bcbbd3" name="5b7ccb7db30945f6b88b57b47884df03" class="tab" ><label for="5b7ccb7db30945f6b88b57b47884df03-61928d00bed643faa1baf1d5b2bcbbd3" >iOS</label>
-<input type="radio" id="5b7ccb7db30945f6b88b57b47884df03-44b432979a294e37b34ddb8b033a22a5" name="5b7ccb7db30945f6b88b57b47884df03" class="tab" ><label for="5b7ccb7db30945f6b88b57b47884df03-44b432979a294e37b34ddb8b033a22a5" >Windows</label>
+<input type="radio" id="754ff4e1a9a349a798d1fdc8117639e3-40a7286f35d24a4386328f98d39843c2" name="754ff4e1a9a349a798d1fdc8117639e3" class="tab" checked><label for="754ff4e1a9a349a798d1fdc8117639e3-40a7286f35d24a4386328f98d39843c2" >General</label>
+<input type="radio" id="754ff4e1a9a349a798d1fdc8117639e3-c81912193168412391b44493a28275e8" name="754ff4e1a9a349a798d1fdc8117639e3" class="tab" ><label for="754ff4e1a9a349a798d1fdc8117639e3-c81912193168412391b44493a28275e8" >Startup</label>
+<input type="radio" id="754ff4e1a9a349a798d1fdc8117639e3-f2f2444f24604ea5a85feab1564adde9" name="754ff4e1a9a349a798d1fdc8117639e3" class="tab" ><label for="754ff4e1a9a349a798d1fdc8117639e3-f2f2444f24604ea5a85feab1564adde9" >Android</label>
+<input type="radio" id="754ff4e1a9a349a798d1fdc8117639e3-779ccd170a294226906963406b8a9441" name="754ff4e1a9a349a798d1fdc8117639e3" class="tab" ><label for="754ff4e1a9a349a798d1fdc8117639e3-779ccd170a294226906963406b8a9441" >iOS</label>
+<input type="radio" id="754ff4e1a9a349a798d1fdc8117639e3-261c818693cc4c58aed39282754dfbe9" name="754ff4e1a9a349a798d1fdc8117639e3" class="tab" ><label for="754ff4e1a9a349a798d1fdc8117639e3-261c818693cc4c58aed39282754dfbe9" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
