--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -369,6 +369,9 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
@@ -390,6 +393,7 @@
         <li><a href="/release-notes/v240">v2.4.0</a></li>
         <li><a href="/release-notes/v241">v2.4.1</a></li>
         <li><a href="/release-notes/v242">2.4.2</a></li>
+        <li><a href="/release-notes/v243">2.4.3 (Preview)</a></li>
         <li><a href="/release-notes/nextrelease">(Next Release) 2.5.0</a></li>
 </ul>
                                 </div>
