--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="efc387905071426ab335d26f403d9b36-87b26bf90ec24a8a923dc7d9e37bdee1" name="efc387905071426ab335d26f403d9b36" class="tab" checked><label for="efc387905071426ab335d26f403d9b36-87b26bf90ec24a8a923dc7d9e37bdee1" >General</label>
-<input type="radio" id="efc387905071426ab335d26f403d9b36-fae3b994dcec4c7c9dbadc662a23437a" name="efc387905071426ab335d26f403d9b36" class="tab" ><label for="efc387905071426ab335d26f403d9b36-fae3b994dcec4c7c9dbadc662a23437a" >Startup</label>
-<input type="radio" id="efc387905071426ab335d26f403d9b36-9fc870e502f04ae4ad0a676428eaac19" name="efc387905071426ab335d26f403d9b36" class="tab" ><label for="efc387905071426ab335d26f403d9b36-9fc870e502f04ae4ad0a676428eaac19" >Android</label>
-<input type="radio" id="efc387905071426ab335d26f403d9b36-3c3cb9288dac469b8c16c1ed13c34750" name="efc387905071426ab335d26f403d9b36" class="tab" ><label for="efc387905071426ab335d26f403d9b36-3c3cb9288dac469b8c16c1ed13c34750" >iOS</label>
-<input type="radio" id="efc387905071426ab335d26f403d9b36-04b59dffea804f22baf42fb89248a5ec" name="efc387905071426ab335d26f403d9b36" class="tab" ><label for="efc387905071426ab335d26f403d9b36-04b59dffea804f22baf42fb89248a5ec" >Windows</label>
+<input type="radio" id="895ee0820517490c977c4ac317a175ee-e1741c01012c482b971b81d16f403109" name="895ee0820517490c977c4ac317a175ee" class="tab" checked><label for="895ee0820517490c977c4ac317a175ee-e1741c01012c482b971b81d16f403109" >General</label>
+<input type="radio" id="895ee0820517490c977c4ac317a175ee-6e4362c508bc4c548217f6cc16f02397" name="895ee0820517490c977c4ac317a175ee" class="tab" ><label for="895ee0820517490c977c4ac317a175ee-6e4362c508bc4c548217f6cc16f02397" >Startup</label>
+<input type="radio" id="895ee0820517490c977c4ac317a175ee-7d9181f3a0b14daab6118af40aa34b3d" name="895ee0820517490c977c4ac317a175ee" class="tab" ><label for="895ee0820517490c977c4ac317a175ee-7d9181f3a0b14daab6118af40aa34b3d" >Android</label>
+<input type="radio" id="895ee0820517490c977c4ac317a175ee-2da5372efc944d0da05219abd3544a58" name="895ee0820517490c977c4ac317a175ee" class="tab" ><label for="895ee0820517490c977c4ac317a175ee-2da5372efc944d0da05219abd3544a58" >iOS</label>
+<input type="radio" id="895ee0820517490c977c4ac317a175ee-4722571979884575a98ca6e73b9d667f" name="895ee0820517490c977c4ac317a175ee" class="tab" ><label for="895ee0820517490c977c4ac317a175ee-4722571979884575a98ca6e73b9d667f" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
