--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -369,16 +369,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="bd901ab8ff594b2fbc2f92fa2771e6d4-d63593bd771f4011b65dc4ebb335aa55" name="bd901ab8ff594b2fbc2f92fa2771e6d4" class="tab" checked><label for="bd901ab8ff594b2fbc2f92fa2771e6d4-d63593bd771f4011b65dc4ebb335aa55" >General</label>
-<input type="radio" id="bd901ab8ff594b2fbc2f92fa2771e6d4-08f619898bc94431b6c945f74dd8daec" name="bd901ab8ff594b2fbc2f92fa2771e6d4" class="tab" ><label for="bd901ab8ff594b2fbc2f92fa2771e6d4-08f619898bc94431b6c945f74dd8daec" >Startup</label>
-<input type="radio" id="bd901ab8ff594b2fbc2f92fa2771e6d4-98ca9c2a59404233b942c2d53059bcb1" name="bd901ab8ff594b2fbc2f92fa2771e6d4" class="tab" ><label for="bd901ab8ff594b2fbc2f92fa2771e6d4-98ca9c2a59404233b942c2d53059bcb1" >Android</label>
-<input type="radio" id="bd901ab8ff594b2fbc2f92fa2771e6d4-ecf80ef8e07547d992a8cd0d8dad186a" name="bd901ab8ff594b2fbc2f92fa2771e6d4" class="tab" ><label for="bd901ab8ff594b2fbc2f92fa2771e6d4-ecf80ef8e07547d992a8cd0d8dad186a" >Windows</label>
+<input type="radio" id="66bfaae0d95249918cbf7264e3422126-750de2bc48564cd0ac833b5d9160a8ee" name="66bfaae0d95249918cbf7264e3422126" class="tab" checked><label for="66bfaae0d95249918cbf7264e3422126-750de2bc48564cd0ac833b5d9160a8ee" >General</label>
+<input type="radio" id="66bfaae0d95249918cbf7264e3422126-6f7602990d56413e87a53ccf90a51edc" name="66bfaae0d95249918cbf7264e3422126" class="tab" ><label for="66bfaae0d95249918cbf7264e3422126-6f7602990d56413e87a53ccf90a51edc" >Startup</label>
+<input type="radio" id="66bfaae0d95249918cbf7264e3422126-02995e91cfc942d9a707a0384450b17a" name="66bfaae0d95249918cbf7264e3422126" class="tab" ><label for="66bfaae0d95249918cbf7264e3422126-02995e91cfc942d9a707a0384450b17a" >Android</label>
+<input type="radio" id="66bfaae0d95249918cbf7264e3422126-da6cb73fdf4446f7a297aac7877c150e" name="66bfaae0d95249918cbf7264e3422126" class="tab" ><label for="66bfaae0d95249918cbf7264e3422126-da6cb73fdf4446f7a297aac7877c150e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
