--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="7f9e2f3237e34347b85c518778041ad6-a2a9e448c1094ff698fa32d6f1f8afc1" name="7f9e2f3237e34347b85c518778041ad6" class="tab" checked><label for="7f9e2f3237e34347b85c518778041ad6-a2a9e448c1094ff698fa32d6f1f8afc1" >General</label>
-<input type="radio" id="7f9e2f3237e34347b85c518778041ad6-553ff20b95c04c54a8f5d1eb919bd459" name="7f9e2f3237e34347b85c518778041ad6" class="tab" ><label for="7f9e2f3237e34347b85c518778041ad6-553ff20b95c04c54a8f5d1eb919bd459" >Startup</label>
-<input type="radio" id="7f9e2f3237e34347b85c518778041ad6-44b474c775bf4e82a981be2905270314" name="7f9e2f3237e34347b85c518778041ad6" class="tab" ><label for="7f9e2f3237e34347b85c518778041ad6-44b474c775bf4e82a981be2905270314" >Android</label>
-<input type="radio" id="7f9e2f3237e34347b85c518778041ad6-130e6862226840ad86d70d6eb7ae110c" name="7f9e2f3237e34347b85c518778041ad6" class="tab" ><label for="7f9e2f3237e34347b85c518778041ad6-130e6862226840ad86d70d6eb7ae110c" >iOS</label>
-<input type="radio" id="7f9e2f3237e34347b85c518778041ad6-d3d71abcccf544358164efce1b25f697" name="7f9e2f3237e34347b85c518778041ad6" class="tab" ><label for="7f9e2f3237e34347b85c518778041ad6-d3d71abcccf544358164efce1b25f697" >Windows</label>
+<input type="radio" id="23e8753616904405b725dddaa340a1b7-0b31830ad3dc4604b54176769dad3323" name="23e8753616904405b725dddaa340a1b7" class="tab" checked><label for="23e8753616904405b725dddaa340a1b7-0b31830ad3dc4604b54176769dad3323" >General</label>
+<input type="radio" id="23e8753616904405b725dddaa340a1b7-1ed47298e6fc421eab22ab963f3ad59d" name="23e8753616904405b725dddaa340a1b7" class="tab" ><label for="23e8753616904405b725dddaa340a1b7-1ed47298e6fc421eab22ab963f3ad59d" >Startup</label>
+<input type="radio" id="23e8753616904405b725dddaa340a1b7-e3378e63004742edbe06c310d896b392" name="23e8753616904405b725dddaa340a1b7" class="tab" ><label for="23e8753616904405b725dddaa340a1b7-e3378e63004742edbe06c310d896b392" >Android</label>
+<input type="radio" id="23e8753616904405b725dddaa340a1b7-2620ae042bfd4622b22905a9b12edfdc" name="23e8753616904405b725dddaa340a1b7" class="tab" ><label for="23e8753616904405b725dddaa340a1b7-2620ae042bfd4622b22905a9b12edfdc" >iOS</label>
+<input type="radio" id="23e8753616904405b725dddaa340a1b7-4ffa6b7493d24360a285ce05b11d391e" name="23e8753616904405b725dddaa340a1b7" class="tab" ><label for="23e8753616904405b725dddaa340a1b7-4ffa6b7493d24360a285ce05b11d391e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
