--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="f383ced49f4b464f8be9b22d164da1a1-d966f0485c6c441e8ab9cbd17f3da97c" name="f383ced49f4b464f8be9b22d164da1a1" class="tab" checked><label for="f383ced49f4b464f8be9b22d164da1a1-d966f0485c6c441e8ab9cbd17f3da97c" >General</label>
-<input type="radio" id="f383ced49f4b464f8be9b22d164da1a1-8d9f6b8a391b451e9d56fc1fdee392e6" name="f383ced49f4b464f8be9b22d164da1a1" class="tab" ><label for="f383ced49f4b464f8be9b22d164da1a1-8d9f6b8a391b451e9d56fc1fdee392e6" >Startup</label>
-<input type="radio" id="f383ced49f4b464f8be9b22d164da1a1-128b549aab12430b97f191476380f8cf" name="f383ced49f4b464f8be9b22d164da1a1" class="tab" ><label for="f383ced49f4b464f8be9b22d164da1a1-128b549aab12430b97f191476380f8cf" >Android</label>
-<input type="radio" id="f383ced49f4b464f8be9b22d164da1a1-b469381f82db4b21915f928fa6e58646" name="f383ced49f4b464f8be9b22d164da1a1" class="tab" ><label for="f383ced49f4b464f8be9b22d164da1a1-b469381f82db4b21915f928fa6e58646" >iOS</label>
-<input type="radio" id="f383ced49f4b464f8be9b22d164da1a1-a11230486f87477181bb3cee27a26093" name="f383ced49f4b464f8be9b22d164da1a1" class="tab" ><label for="f383ced49f4b464f8be9b22d164da1a1-a11230486f87477181bb3cee27a26093" >Windows</label>
+<input type="radio" id="e037db4391d84d50bf1f47329a1552fd-f3a2dd0454254bc5be6d3200e61da51d" name="e037db4391d84d50bf1f47329a1552fd" class="tab" checked><label for="e037db4391d84d50bf1f47329a1552fd-f3a2dd0454254bc5be6d3200e61da51d" >General</label>
+<input type="radio" id="e037db4391d84d50bf1f47329a1552fd-e8c3527184be42798f1f1d2e94e065c8" name="e037db4391d84d50bf1f47329a1552fd" class="tab" ><label for="e037db4391d84d50bf1f47329a1552fd-e8c3527184be42798f1f1d2e94e065c8" >Startup</label>
+<input type="radio" id="e037db4391d84d50bf1f47329a1552fd-4c78418e5e9140d4b672cadd3b9c8117" name="e037db4391d84d50bf1f47329a1552fd" class="tab" ><label for="e037db4391d84d50bf1f47329a1552fd-4c78418e5e9140d4b672cadd3b9c8117" >Android</label>
+<input type="radio" id="e037db4391d84d50bf1f47329a1552fd-4dce553262d34ebb88f7d764096d5217" name="e037db4391d84d50bf1f47329a1552fd" class="tab" ><label for="e037db4391d84d50bf1f47329a1552fd-4dce553262d34ebb88f7d764096d5217" >iOS</label>
+<input type="radio" id="e037db4391d84d50bf1f47329a1552fd-1c0ee9d3805944aba07c7a8f85ecd6b1" name="e037db4391d84d50bf1f47329a1552fd" class="tab" ><label for="e037db4391d84d50bf1f47329a1552fd-1c0ee9d3805944aba07c7a8f85ecd6b1" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
