--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="f202599c89e34728b2e5c526449136a9-171451dd7e3c4cd4ab29b127a2e3e6c9" name="f202599c89e34728b2e5c526449136a9" class="tab" checked><label for="f202599c89e34728b2e5c526449136a9-171451dd7e3c4cd4ab29b127a2e3e6c9" >General</label>
-<input type="radio" id="f202599c89e34728b2e5c526449136a9-b454e391e6d448b4902b39b01f1a164a" name="f202599c89e34728b2e5c526449136a9" class="tab" ><label for="f202599c89e34728b2e5c526449136a9-b454e391e6d448b4902b39b01f1a164a" >Startup</label>
-<input type="radio" id="f202599c89e34728b2e5c526449136a9-dc1ea792ca3549a9b6b797dd63d947c2" name="f202599c89e34728b2e5c526449136a9" class="tab" ><label for="f202599c89e34728b2e5c526449136a9-dc1ea792ca3549a9b6b797dd63d947c2" >Android</label>
-<input type="radio" id="f202599c89e34728b2e5c526449136a9-245ff0964ace4df8ba45599b4ce0b4f7" name="f202599c89e34728b2e5c526449136a9" class="tab" ><label for="f202599c89e34728b2e5c526449136a9-245ff0964ace4df8ba45599b4ce0b4f7" >iOS</label>
-<input type="radio" id="f202599c89e34728b2e5c526449136a9-4b290c89eaa24ce19e350fe0d127a8ff" name="f202599c89e34728b2e5c526449136a9" class="tab" ><label for="f202599c89e34728b2e5c526449136a9-4b290c89eaa24ce19e350fe0d127a8ff" >Windows</label>
+<input type="radio" id="ed1a077b84fb4bc5b7bf62e64ebbc0f0-978e07aec6d34a7e971bbce66fe7b3e3" name="ed1a077b84fb4bc5b7bf62e64ebbc0f0" class="tab" checked><label for="ed1a077b84fb4bc5b7bf62e64ebbc0f0-978e07aec6d34a7e971bbce66fe7b3e3" >General</label>
+<input type="radio" id="ed1a077b84fb4bc5b7bf62e64ebbc0f0-8d53ca2f7cf44509b36441863314322d" name="ed1a077b84fb4bc5b7bf62e64ebbc0f0" class="tab" ><label for="ed1a077b84fb4bc5b7bf62e64ebbc0f0-8d53ca2f7cf44509b36441863314322d" >Startup</label>
+<input type="radio" id="ed1a077b84fb4bc5b7bf62e64ebbc0f0-b90a320e277947b392dad756cf13a68e" name="ed1a077b84fb4bc5b7bf62e64ebbc0f0" class="tab" ><label for="ed1a077b84fb4bc5b7bf62e64ebbc0f0-b90a320e277947b392dad756cf13a68e" >Android</label>
+<input type="radio" id="ed1a077b84fb4bc5b7bf62e64ebbc0f0-e4384575af42493aa2d8aa468821bb9d" name="ed1a077b84fb4bc5b7bf62e64ebbc0f0" class="tab" ><label for="ed1a077b84fb4bc5b7bf62e64ebbc0f0-e4384575af42493aa2d8aa468821bb9d" >iOS</label>
+<input type="radio" id="ed1a077b84fb4bc5b7bf62e64ebbc0f0-0b889027e3ac4d21aa36c66dece3e627" name="ed1a077b84fb4bc5b7bf62e64ebbc0f0" class="tab" ><label for="ed1a077b84fb4bc5b7bf62e64ebbc0f0-0b889027e3ac4d21aa36c66dece3e627" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
