--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -369,15 +369,18 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="a474dc84bdc04bfeab9446eaa284b220-90f6b39c7de54640b4bd4a9cf803bc98" name="a474dc84bdc04bfeab9446eaa284b220" class="tab" checked><label for="a474dc84bdc04bfeab9446eaa284b220-90f6b39c7de54640b4bd4a9cf803bc98" >General</label>
-<input type="radio" id="a474dc84bdc04bfeab9446eaa284b220-0b9e5d613cff4ba0bc03f20ebf14f2ef" name="a474dc84bdc04bfeab9446eaa284b220" class="tab" ><label for="a474dc84bdc04bfeab9446eaa284b220-0b9e5d613cff4ba0bc03f20ebf14f2ef" >Startup</label>
-<input type="radio" id="a474dc84bdc04bfeab9446eaa284b220-138c8d7e658a443cb9459f6b1d15a112" name="a474dc84bdc04bfeab9446eaa284b220" class="tab" ><label for="a474dc84bdc04bfeab9446eaa284b220-138c8d7e658a443cb9459f6b1d15a112" >Android</label>
+<input type="radio" id="e730a0e576534cbd8b14aa3218de6e79-4eb39ebe46434e6d86d9d127df28d460" name="e730a0e576534cbd8b14aa3218de6e79" class="tab" checked><label for="e730a0e576534cbd8b14aa3218de6e79-4eb39ebe46434e6d86d9d127df28d460" >General</label>
+<input type="radio" id="e730a0e576534cbd8b14aa3218de6e79-b6dbe43cef5f4391a41ff5f2372f273e" name="e730a0e576534cbd8b14aa3218de6e79" class="tab" ><label for="e730a0e576534cbd8b14aa3218de6e79-b6dbe43cef5f4391a41ff5f2372f273e" >Startup</label>
+<input type="radio" id="e730a0e576534cbd8b14aa3218de6e79-a584fe115f3b4bf2a7fdc92160a4b073" name="e730a0e576534cbd8b14aa3218de6e79" class="tab" ><label for="e730a0e576534cbd8b14aa3218de6e79-a584fe115f3b4bf2a7fdc92160a4b073" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
