--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="056bfce67d544bcbadf0cdcbc3bdb279-c475e055d40e4398ba635ace6a9828af" name="056bfce67d544bcbadf0cdcbc3bdb279" class="tab" checked><label for="056bfce67d544bcbadf0cdcbc3bdb279-c475e055d40e4398ba635ace6a9828af" >General</label>
-<input type="radio" id="056bfce67d544bcbadf0cdcbc3bdb279-c342a7c4d2144995b45ae4c4bfd34041" name="056bfce67d544bcbadf0cdcbc3bdb279" class="tab" ><label for="056bfce67d544bcbadf0cdcbc3bdb279-c342a7c4d2144995b45ae4c4bfd34041" >Startup</label>
-<input type="radio" id="056bfce67d544bcbadf0cdcbc3bdb279-a002208650c44cedb9d4c9d21260be22" name="056bfce67d544bcbadf0cdcbc3bdb279" class="tab" ><label for="056bfce67d544bcbadf0cdcbc3bdb279-a002208650c44cedb9d4c9d21260be22" >Android</label>
-<input type="radio" id="056bfce67d544bcbadf0cdcbc3bdb279-0e4c13efe4a14efbb4b848363a469aaa" name="056bfce67d544bcbadf0cdcbc3bdb279" class="tab" ><label for="056bfce67d544bcbadf0cdcbc3bdb279-0e4c13efe4a14efbb4b848363a469aaa" >iOS</label>
-<input type="radio" id="056bfce67d544bcbadf0cdcbc3bdb279-b6990dd67f5448bd85a1a6579f64d2ea" name="056bfce67d544bcbadf0cdcbc3bdb279" class="tab" ><label for="056bfce67d544bcbadf0cdcbc3bdb279-b6990dd67f5448bd85a1a6579f64d2ea" >Windows</label>
+<input type="radio" id="462c6fb85688486ea5084c90ade1d610-667ade772f17486da17a45e93fe9be13" name="462c6fb85688486ea5084c90ade1d610" class="tab" checked><label for="462c6fb85688486ea5084c90ade1d610-667ade772f17486da17a45e93fe9be13" >General</label>
+<input type="radio" id="462c6fb85688486ea5084c90ade1d610-a95f549a173c4ca7ac2a293c0ca7b81a" name="462c6fb85688486ea5084c90ade1d610" class="tab" ><label for="462c6fb85688486ea5084c90ade1d610-a95f549a173c4ca7ac2a293c0ca7b81a" >Startup</label>
+<input type="radio" id="462c6fb85688486ea5084c90ade1d610-b7b26276577e49f2ab55384e1f751ae9" name="462c6fb85688486ea5084c90ade1d610" class="tab" ><label for="462c6fb85688486ea5084c90ade1d610-b7b26276577e49f2ab55384e1f751ae9" >Android</label>
+<input type="radio" id="462c6fb85688486ea5084c90ade1d610-0c0c47032b7e4f7893ab3595c3afce06" name="462c6fb85688486ea5084c90ade1d610" class="tab" ><label for="462c6fb85688486ea5084c90ade1d610-0c0c47032b7e4f7893ab3595c3afce06" >iOS</label>
+<input type="radio" id="462c6fb85688486ea5084c90ade1d610-5e913c2f8301497e92e3b9a24d4c3b6a" name="462c6fb85688486ea5084c90ade1d610" class="tab" ><label for="462c6fb85688486ea5084c90ade1d610-5e913c2f8301497e92e3b9a24d4c3b6a" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
