--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="9c17d1adea65448fb5959fcf7c00e132-b413a2a464c7499aa7aa310416f8f2f2" name="9c17d1adea65448fb5959fcf7c00e132" class="tab" checked><label for="9c17d1adea65448fb5959fcf7c00e132-b413a2a464c7499aa7aa310416f8f2f2" >General</label>
-<input type="radio" id="9c17d1adea65448fb5959fcf7c00e132-e973942a803a45979939ff2f10031714" name="9c17d1adea65448fb5959fcf7c00e132" class="tab" ><label for="9c17d1adea65448fb5959fcf7c00e132-e973942a803a45979939ff2f10031714" >Startup</label>
-<input type="radio" id="9c17d1adea65448fb5959fcf7c00e132-baf3ad3c81e34b7089a3f09da2b73a76" name="9c17d1adea65448fb5959fcf7c00e132" class="tab" ><label for="9c17d1adea65448fb5959fcf7c00e132-baf3ad3c81e34b7089a3f09da2b73a76" >Android</label>
-<input type="radio" id="9c17d1adea65448fb5959fcf7c00e132-7a7ee63dc4c04dada57c78040163b674" name="9c17d1adea65448fb5959fcf7c00e132" class="tab" ><label for="9c17d1adea65448fb5959fcf7c00e132-7a7ee63dc4c04dada57c78040163b674" >iOS</label>
-<input type="radio" id="9c17d1adea65448fb5959fcf7c00e132-ad14b26e1584446d92cb1637142e92dc" name="9c17d1adea65448fb5959fcf7c00e132" class="tab" ><label for="9c17d1adea65448fb5959fcf7c00e132-ad14b26e1584446d92cb1637142e92dc" >Windows</label>
+<input type="radio" id="836b1875092a4c3b9a174235380cfa78-734e7c3206c340a894c692741a692dfe" name="836b1875092a4c3b9a174235380cfa78" class="tab" checked><label for="836b1875092a4c3b9a174235380cfa78-734e7c3206c340a894c692741a692dfe" >General</label>
+<input type="radio" id="836b1875092a4c3b9a174235380cfa78-3e7c92c7e2f84f029a05b9959fae7480" name="836b1875092a4c3b9a174235380cfa78" class="tab" ><label for="836b1875092a4c3b9a174235380cfa78-3e7c92c7e2f84f029a05b9959fae7480" >Startup</label>
+<input type="radio" id="836b1875092a4c3b9a174235380cfa78-eecc4399ca2d40c790597cb7f435177f" name="836b1875092a4c3b9a174235380cfa78" class="tab" ><label for="836b1875092a4c3b9a174235380cfa78-eecc4399ca2d40c790597cb7f435177f" >Android</label>
+<input type="radio" id="836b1875092a4c3b9a174235380cfa78-2e3afce3154d46fead3d988a793759b2" name="836b1875092a4c3b9a174235380cfa78" class="tab" ><label for="836b1875092a4c3b9a174235380cfa78-2e3afce3154d46fead3d988a793759b2" >iOS</label>
+<input type="radio" id="836b1875092a4c3b9a174235380cfa78-21e736f678e3440d98b55af2324d6813" name="836b1875092a4c3b9a174235380cfa78" class="tab" ><label for="836b1875092a4c3b9a174235380cfa78-21e736f678e3440d98b55af2324d6813" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
