--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -369,16 +369,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="acdb411f68b940b1bcf7d98bea6a685f-70f10a44ef3d481ab5f11e11232fac76" name="acdb411f68b940b1bcf7d98bea6a685f" class="tab" checked><label for="acdb411f68b940b1bcf7d98bea6a685f-70f10a44ef3d481ab5f11e11232fac76" >General</label>
-<input type="radio" id="acdb411f68b940b1bcf7d98bea6a685f-404e569b4802462987e7b38c83b2d769" name="acdb411f68b940b1bcf7d98bea6a685f" class="tab" ><label for="acdb411f68b940b1bcf7d98bea6a685f-404e569b4802462987e7b38c83b2d769" >Startup</label>
-<input type="radio" id="acdb411f68b940b1bcf7d98bea6a685f-1c0a3272147e4c569dea2694df09aa03" name="acdb411f68b940b1bcf7d98bea6a685f" class="tab" ><label for="acdb411f68b940b1bcf7d98bea6a685f-1c0a3272147e4c569dea2694df09aa03" >Android</label>
-<input type="radio" id="acdb411f68b940b1bcf7d98bea6a685f-7916b02da9ec43e2adfc3c6050e3b7d6" name="acdb411f68b940b1bcf7d98bea6a685f" class="tab" ><label for="acdb411f68b940b1bcf7d98bea6a685f-7916b02da9ec43e2adfc3c6050e3b7d6" >iOS</label>
+<input type="radio" id="5d434c3b7cb0435aa4a3962f17818c67-dc5564a2ac2e4419b150b4dfba7c3599" name="5d434c3b7cb0435aa4a3962f17818c67" class="tab" checked><label for="5d434c3b7cb0435aa4a3962f17818c67-dc5564a2ac2e4419b150b4dfba7c3599" >General</label>
+<input type="radio" id="5d434c3b7cb0435aa4a3962f17818c67-5b6303d7a8be4cce998a9135b92554e7" name="5d434c3b7cb0435aa4a3962f17818c67" class="tab" ><label for="5d434c3b7cb0435aa4a3962f17818c67-5b6303d7a8be4cce998a9135b92554e7" >Startup</label>
+<input type="radio" id="5d434c3b7cb0435aa4a3962f17818c67-0b6f24ec34f44ef9962eb432cbdcd382" name="5d434c3b7cb0435aa4a3962f17818c67" class="tab" ><label for="5d434c3b7cb0435aa4a3962f17818c67-0b6f24ec34f44ef9962eb432cbdcd382" >Android</label>
+<input type="radio" id="5d434c3b7cb0435aa4a3962f17818c67-9b01948b0b5a43ecbbda042a6612a5e2" name="5d434c3b7cb0435aa4a3962f17818c67" class="tab" ><label for="5d434c3b7cb0435aa4a3962f17818c67-9b01948b0b5a43ecbbda042a6612a5e2" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
