--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -369,15 +369,18 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="f553226b430d4b81a82e97c18c112c0f-f4af23cabe2a4dbe852bec655afd9805" name="f553226b430d4b81a82e97c18c112c0f" class="tab" checked><label for="f553226b430d4b81a82e97c18c112c0f-f4af23cabe2a4dbe852bec655afd9805" >General</label>
-<input type="radio" id="f553226b430d4b81a82e97c18c112c0f-11b78744b519455bafbba1a4b8702dcd" name="f553226b430d4b81a82e97c18c112c0f" class="tab" ><label for="f553226b430d4b81a82e97c18c112c0f-11b78744b519455bafbba1a4b8702dcd" >Startup</label>
-<input type="radio" id="f553226b430d4b81a82e97c18c112c0f-a85f9a9fed1a42c9bdb88f21f0bcfce6" name="f553226b430d4b81a82e97c18c112c0f" class="tab" ><label for="f553226b430d4b81a82e97c18c112c0f-a85f9a9fed1a42c9bdb88f21f0bcfce6" >Android</label>
+<input type="radio" id="e6b1bf55e71a49aea7a4b2501f78d132-c8b350fdc1d8491ba8f852783b4a0c7f" name="e6b1bf55e71a49aea7a4b2501f78d132" class="tab" checked><label for="e6b1bf55e71a49aea7a4b2501f78d132-c8b350fdc1d8491ba8f852783b4a0c7f" >General</label>
+<input type="radio" id="e6b1bf55e71a49aea7a4b2501f78d132-dcc06d87106b4c0bbb8115f398c65236" name="e6b1bf55e71a49aea7a4b2501f78d132" class="tab" ><label for="e6b1bf55e71a49aea7a4b2501f78d132-dcc06d87106b4c0bbb8115f398c65236" >Startup</label>
+<input type="radio" id="e6b1bf55e71a49aea7a4b2501f78d132-fffb4189ceb44bdda0b4808968c1f1d0" name="e6b1bf55e71a49aea7a4b2501f78d132" class="tab" ><label for="e6b1bf55e71a49aea7a4b2501f78d132-fffb4189ceb44bdda0b4808968c1f1d0" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
