--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -369,6 +369,9 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
@@ -381,11 +384,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="14f0e010b68943d8b6482da8751a7533-33988e5d1aca4c3ca21ce6770ba32fd6" name="14f0e010b68943d8b6482da8751a7533" class="tab" checked><label for="14f0e010b68943d8b6482da8751a7533-33988e5d1aca4c3ca21ce6770ba32fd6" >General</label>
-<input type="radio" id="14f0e010b68943d8b6482da8751a7533-4843bc707f3346189d6c6843ad9a370a" name="14f0e010b68943d8b6482da8751a7533" class="tab" ><label for="14f0e010b68943d8b6482da8751a7533-4843bc707f3346189d6c6843ad9a370a" >Startup</label>
-<input type="radio" id="14f0e010b68943d8b6482da8751a7533-969049a5e7574625b866457b26ea7534" name="14f0e010b68943d8b6482da8751a7533" class="tab" ><label for="14f0e010b68943d8b6482da8751a7533-969049a5e7574625b866457b26ea7534" >Android</label>
-<input type="radio" id="14f0e010b68943d8b6482da8751a7533-ff97d4b4cdb74a7a9cf505a88282c1f1" name="14f0e010b68943d8b6482da8751a7533" class="tab" ><label for="14f0e010b68943d8b6482da8751a7533-ff97d4b4cdb74a7a9cf505a88282c1f1" >iOS</label>
-<input type="radio" id="14f0e010b68943d8b6482da8751a7533-46eab73780a4446fb7f0ac8fb5f236da" name="14f0e010b68943d8b6482da8751a7533" class="tab" ><label for="14f0e010b68943d8b6482da8751a7533-46eab73780a4446fb7f0ac8fb5f236da" >Windows</label></li>
+<input type="radio" id="250eb8e736514a0abcde883b9320a9cd-2dce695d65bb4b5a822f37fd40eb74a6" name="250eb8e736514a0abcde883b9320a9cd" class="tab" checked><label for="250eb8e736514a0abcde883b9320a9cd-2dce695d65bb4b5a822f37fd40eb74a6" >General</label>
+<input type="radio" id="250eb8e736514a0abcde883b9320a9cd-4d729f92ad47494ba525610f60cdd69f" name="250eb8e736514a0abcde883b9320a9cd" class="tab" ><label for="250eb8e736514a0abcde883b9320a9cd-4d729f92ad47494ba525610f60cdd69f" >Startup</label>
+<input type="radio" id="250eb8e736514a0abcde883b9320a9cd-a4ec6f7b312345d0b6fef0f49e7fee97" name="250eb8e736514a0abcde883b9320a9cd" class="tab" ><label for="250eb8e736514a0abcde883b9320a9cd-a4ec6f7b312345d0b6fef0f49e7fee97" >Android</label>
+<input type="radio" id="250eb8e736514a0abcde883b9320a9cd-9984db0d3ae74a8192047f82d295b610" name="250eb8e736514a0abcde883b9320a9cd" class="tab" ><label for="250eb8e736514a0abcde883b9320a9cd-9984db0d3ae74a8192047f82d295b610" >iOS</label>
+<input type="radio" id="250eb8e736514a0abcde883b9320a9cd-305715d26cfc4333938556c8ad6cb264" name="250eb8e736514a0abcde883b9320a9cd" class="tab" ><label for="250eb8e736514a0abcde883b9320a9cd-305715d26cfc4333938556c8ad6cb264" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
