--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -367,6 +367,9 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
@@ -376,11 +379,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="fc75a133a3c742bd8a67eb9d1d607b04-5a8eee3e78074a14ad0f87ddf656c471" name="fc75a133a3c742bd8a67eb9d1d607b04" class="tab" checked=""><label for="fc75a133a3c742bd8a67eb9d1d607b04-5a8eee3e78074a14ad0f87ddf656c471">General</label>
-<input type="radio" id="fc75a133a3c742bd8a67eb9d1d607b04-497956a9c4d64f8494e46ddf4d508be1" name="fc75a133a3c742bd8a67eb9d1d607b04" class="tab"><label for="fc75a133a3c742bd8a67eb9d1d607b04-497956a9c4d64f8494e46ddf4d508be1">Startup</label>
-<input type="radio" id="fc75a133a3c742bd8a67eb9d1d607b04-4b72acfed8ec4ab7b66f4d99cda6fc4f" name="fc75a133a3c742bd8a67eb9d1d607b04" class="tab"><label for="fc75a133a3c742bd8a67eb9d1d607b04-4b72acfed8ec4ab7b66f4d99cda6fc4f">Android</label>
-<input type="radio" id="fc75a133a3c742bd8a67eb9d1d607b04-b494b654de9043ab8ba97f0e301aecab" name="fc75a133a3c742bd8a67eb9d1d607b04" class="tab"><label for="fc75a133a3c742bd8a67eb9d1d607b04-b494b654de9043ab8ba97f0e301aecab">iOS</label>
-<input type="radio" id="fc75a133a3c742bd8a67eb9d1d607b04-2790c7f2230c4c93a715b5eeac319f21" name="fc75a133a3c742bd8a67eb9d1d607b04" class="tab"><label for="fc75a133a3c742bd8a67eb9d1d607b04-2790c7f2230c4c93a715b5eeac319f21">Windows</label>
+<input type="radio" id="79e08ddcbe6949128079b129ccf6cb40-3a589a48924341cf816065c14b692bc6" name="79e08ddcbe6949128079b129ccf6cb40" class="tab" checked=""><label for="79e08ddcbe6949128079b129ccf6cb40-3a589a48924341cf816065c14b692bc6">General</label>
+<input type="radio" id="79e08ddcbe6949128079b129ccf6cb40-fe1269450c1f488dbc4e22588d45e1b4" name="79e08ddcbe6949128079b129ccf6cb40" class="tab"><label for="79e08ddcbe6949128079b129ccf6cb40-fe1269450c1f488dbc4e22588d45e1b4">Startup</label>
+<input type="radio" id="79e08ddcbe6949128079b129ccf6cb40-3d19289026b7469e9b2fed99c2ec1fb6" name="79e08ddcbe6949128079b129ccf6cb40" class="tab"><label for="79e08ddcbe6949128079b129ccf6cb40-3d19289026b7469e9b2fed99c2ec1fb6">Android</label>
+<input type="radio" id="79e08ddcbe6949128079b129ccf6cb40-42e79cb9d34447fcaee6149657640df0" name="79e08ddcbe6949128079b129ccf6cb40" class="tab"><label for="79e08ddcbe6949128079b129ccf6cb40-42e79cb9d34447fcaee6149657640df0">iOS</label>
+<input type="radio" id="79e08ddcbe6949128079b129ccf6cb40-3957d01470af4c5ab1e9a9a4aabdfb85" name="79e08ddcbe6949128079b129ccf6cb40" class="tab"><label for="79e08ddcbe6949128079b129ccf6cb40-3957d01470af4c5ab1e9a9a4aabdfb85">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
