--- a/release-notes/nextrelease.html
+++ b/release-notes/nextrelease.html
@@ -368,6 +368,9 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                        </div>
                                                         <div class="sidebar-nav-child active">
                                                             <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
