--- a/release-notes/v243.html
+++ b/release-notes/v243.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - Advertising</title>
+    <title>Shiny.NET - 2.4.3 (Preview)</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">Advertising</div>
+                                <div class="text-white m-0 title">2.4.3 (Preview)</div>
                             </div>
                         </div>
                     </div>
@@ -189,11 +189,11 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/blehosting">Bluetooth LE Hosting</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/blehosting/getting-started">Getting Started</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child active">
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/blehosting/advertising">Advertising</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -343,7 +343,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/release-notes">Release Notes</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
@@ -368,7 +368,7 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child">
+                                                        <div class="sidebar-nav-child active">
                                                             <a href="/release-notes/v243">2.4.3 (Preview)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -377,33 +377,14 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <p>Advertising is severally downplayed by both operating systems.  On iOS, you are limited to advertising the local name and service UUIDs</p>
+                                    <h2 id="bluetooth-le">Bluetooth LE</h2>
 <ul>
-<li>On iOS, you can only advertise a custom local name and custom service UUIDs</li>
-<li>On Android, things are different
-<ul>
-<li>You cannot control the device naming</li>
-<li>TX Power (high, medium, low, balanced)</li>
-<li>Service Data</li>
-<li>Service UUIDs</li>
-<li>Specific Manufacturer Data</li>
+<li>[Fix] ManagedPeripheral properly restores and set notifications <a href="https://github.com/shinyorg/shiny/issues/902">GH-902</a></li>
 </ul>
-</li>
-</ul>
-<p>For now, I have chosen to support only the same feature band as iOS</p>
-<pre><code class="language-csharp">
-CrossBleAdapter.Current.Advertiser.Start(new AdvertisementData
-{
-    LocalName = &quot;TestServer&quot;,
-    ServiceUUIDs = new Guid[] { /* your custom UUIDs here */ }
-});
-
-CrossBleAdapter.Current.Advertiser.Stop();
-</code></pre>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/blehosting/advertising.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/v243.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
